--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://discord.com/invite/fYfng2dUVM"class="mr-5 hover:text-gray-900">Discord</a>
             <a href="https://oceansofgamess.com/"class="mr-5 hover:text-gray-900">Games</a>
           </nav>
-          <a href="games.html" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">paid softwares for free
+          <a href="softwares.html" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">paid softwares for free
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
